[project]
name = "blockchain-mcp"
version = "0.1.0"
description = "Add blockchain mcp server for bitcoin, ethereum, vechain, solana. "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=0.4.1",
    "jsonschema>=4.23.0",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.0",
    "web3>=7.10.0",
]
keywords = ["MCP", "blockchain", "ethereum", "eth"]

[project.scripts]
blockchain-mcp = "blockchain_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


